[package]
name = "colour-previewer"
version = "0.1.0"
authors = ["SheepTester <ussa.say@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
clap = "2.33.3"
crc32fast = "1.2.1"
rand = "0.8.3"
